# observation-tools-client

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  BENCHMARKS.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  WORKSPACE  cargo-bazel-lock.json  docker-compose.yml  graphql.config.yml  maven_install.json  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  rustfmt.toml  tailwind.config.js
crates/observation-tools-client/: Cargo.toml  build.rs  index.d.ts  index.js  openapi.json  package.json  pnpm-lock.yaml
crates/observation-tools-client/benches/: upload_benchmarks.rs
crates/observation-tools-client/examples/: basic_usage.rs  log_capture.rs
crates/observation-tools-client/src/: client.rs  config.rs  context.rs  error.rs  execution.rs  group.rs  lib.rs  logger.rs  noop.rs  observation.rs  observation_handle.rs  server_client.rs
crates/observation-tools-client/src/axum/: execution_layer.rs  mod.rs  request_observer.rs
crates/observation-tools-client/src/tracing/: layer.rs  mod.rs  span_data.rs
crates/observation-tools-client/tests/: api_integration_test.rs  api_key_integration_test.rs  axum_layer_test.rs  logger_test.rs  observe_macro_test.rs  tracing_layer_test.rs
crates/observation-tools-client/tests/common/: mod.rs
crates/observation-tools-macros/: Cargo.toml
crates/observation-tools-macros/src/: lib.rs
crates/observation-tools-server/: Cargo.toml  build.rs
crates/observation-tools-server/src/: auth.rs  config.rs  csrf.rs  debug_parser.rs  lib.rs  main.rs  server.rs
crates/observation-tools-server/src/api/: executions.rs  mod.rs  observations.rs  types.rs
crates/observation-tools-server/src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  oauth.rs  storage.rs
crates/observation-tools-server/src/storage/: blob.rs  group.rs  metadata.rs  mod.rs  proto.rs  stored_execution.rs
crates/observation-tools-server/src/ui/: execution_detail.rs  executions_list.rs  group_tree.rs  index.rs  mod.rs  observation_detail.rs  templates.rs
crates/observation-tools-server/static/: styles.css
crates/observation-tools-server/styles/: github-markdown.css  input.css  json-viewer.css
crates/observation-tools-server/templates/: _group_tree.html  _json_value.html  _macros.html  _nav_bar.html  _observation_content.html  _observation_list.html  _observation_log_list.html  _observation_payload_list.html  base.html  execution_detail.html  executions_list.html  index.html  observation_detail.html  observation_detail_partial.html
crates/observation-tools-shared/: Cargo.toml
crates/observation-tools-shared/src/: api.rs  error.rs  group_id.rs  lib.rs  models.rs  observation.rs  payload.rs  payload_id.rs
examples/: Cargo.toml  README.md  example.py  getting-started.rs  index.js  lib.rs  main.rs  package.json  pnpm-lock.yaml  quickstart.py  wasm_pack.sh
src/client/: BUILD.bazel  Cargo.toml  README.md  client.rs  lib.rs  pyproject.toml  run_id.rs  sign_in_redirect.html  task_handle.rs  throttle_without_access_cookie.rs  token_generator.rs  upload_artifact.rs  util.rs  wasm_pack.sh
src/client/cpp/: BUILD.bazel  BUILD.cgal.bazel  BUILD.eigen.bazel  BUILD.opencv.bazel  artifact_uploader.h  artifact_uploader_2d.cpp  artifact_uploader_2d.h  artifact_uploader_3d.cpp  artifact_uploader_3d.h  client.cpp  client.h  deps.bzl  generic_artifact_uploader.cpp  generic_artifact_uploader.h  run_stage_uploader.cpp  run_stage_uploader.h  run_uploader.cpp  run_uploader.h  util.cpp  util.h
src/client/cpp/converters/: BUILD.bazel  all.h  cgal.cpp  cgal.h  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  number.cpp  number.h  object2.cpp  object2.h  object3.h  opencv.cpp  opencv.h  point2.cpp  point2.h  point3.cpp  point3.h  structured.cpp  (+9 more)
src/client/groups/: artifact_uploader_2d.rs  artifact_uploader_3d.rs  base_artifact_uploader.rs  generic_artifact_uploader.rs  mod.rs  run_uploader.rs
src/client/java/: BUILD.bazel  ObservationToolsClient.kt  ProtoUtils.kt  RunStageUploader.kt  RunUploader.kt  UuidUtils.kt  deps.bzl
src/client/rust/: BUILD.bazel  Cargo.toml  README.md  api.rs  artifact_uploader_2d.rs  artifact_uploader_3d.rs  aws_sign_in.rs  base_artifact_uploader.rs  client.rs  generate_cpp_bindings.sh  generic_artifact_uploader.rs  geometry3_builder.rs  google_token_generator.rs  lib.rs  object3_builder.rs  pyproject.toml  run_id.rs  run_stage_uploader.rs  run_uploader.rs  sphere_builder.rs  static_source_data.rs  task_handle.rs  task_handler.rs  task_loop.rs  test.py  test_utils.rs  throttle_without_access_cookie.rs  token_generator.rs  upload_artifact.rs  upload_artifact_task.rs  upload_source_data_mutation.graphql  uploader_stack.rs  user_metadata.rs  util.rs  wasm_pack.sh  wasm_test.js
src/client/tests/: examples.rs
src/common/: Cargo.toml  artifact.rs  build.rs  create_artifact.rs  lib.rs  math.rs  project.rs  run.rs
src/common/artifacts/: geometry2.rs  geometry3.rs  image2.rs  matrix.rs  mesh.rs  mod.rs  nalegbra.rs  number.rs  object1.rs  object2.rs  object3.rs  point2.rs  point3.rs  polygon2.rs  polygon3.rs  polygon_edge2.rs  polygon_edge3.rs  rect2.rs  segment2.rs  series.rs  sphere.rs  text.rs  transform2.rs  transform3.rs  user_metadata.rs  vector2.rs  vector3.rs  vertex.rs
src/common/proto/: api_context.proto  artifact.proto  create_artifact.proto  internal.proto  project_id.proto  run_data.proto  run_id.proto  static_source_data_manifest.proto
src/proto/: BUILD.bazel  api_context.proto  artifact.proto  create_artifact.proto  generate_rust_protos.sh  internal.proto  math.proto  project_id.proto  run_data.proto  run_id.proto  static_source_data_manifest.proto
src/server/: Cargo.toml  build.rs  main.rs  server.rs  ui.rs
src/server/auth/: mod.rs  permission.rs  principal.rs  resource_id.rs
src/server/graphql/: artifact.rs  artifact_version.rs  create_project.rs  diff.rs  get_projects.rs  mod.rs  node.rs  project.rs  util.rs
src/server/ingestion/: create_artifact.rs  mod.rs
src/server/storage/: artifact.rs  mod.rs  permissions.rs  project.rs  util.rs
(+394 files in other folders)
