[workspace]
members = [
    "src/client/rust",
    "examples",
    "src/common"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-channel = "1.8"
async-trait = "0.1.52"
base64 = "0.21"
bs58 = "0.5"
cached = "0.48"
clap = "4.0.32"
console_error_panic_hook = "0.1"
crossbeam-channel = "0.5"
custom_error = "1.9"
derive_builder = "0.12"
docify = "0.2.7"
env_logger = "0.10.0"
form_urlencoded = "1.0.1"
futures = "0.3"
image = "0.24.5"
instant = "0.1"
itertools = "0.12"
js-sys = "0.3.60"
keyring = "2"
nalgebra = "0.32"
oauth2 = "4.4.2"
pin-project = "1"
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
protobuf = "=3.2.0"
protobuf-codegen = "=3.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = "0.12.9"
serde = "=1.0.171"
serde_json = "1.0.79"
sha2 = "0.10.6"
glob = "0.3.1"
tempfile = "3"
thiserror = "1.0"
tokio = "1"
tokio-util = "0.7.10"
tower = "0.4.13"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.35"
tracing-log = "0.1.3"
tracing-subscriber = "0.3"
tracing-wasm = "0.2.1"
url = "2.2.2"
uuid = "1.2.2"
wasm-bindgen = "0.2.91"
wasm-bindgen-derive = "0.2.1"
wasm-bindgen-futures = "0.4.39"
web-sys = "0.3.66"
whoami = "1.4"

[patch.crates-io]
#reqwest = { git = "https://github.com/Dig-Doug/reqwest", branch = "wasm-cookies" }
