[workspace]
members = [
    "examples",
    "src/client",
    "src/common",
    "src/server",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-channel = "1.8"
async-graphql = "7.0.11"
async-graphql-axum = "7.0.11"
async-trait = "0.1.52"
axum = "0.7.7"
base64 = "0.22.1"
bs58 = "0.5"
cached = "0.53.1"
chrono = "0.4.38"
clap = "4.0.32"
console_error_panic_hook = "0.1"
crossbeam-channel = "0.5"
custom_error = "1.9"
deadpool = "0.12.1"
derive_builder = "0.12"
diesel = "2.2.4"
diesel-async = "0.5.1"
diesel_migrations = "2.2.0"
docify = "0.2.7"
env_logger = "0.10.0"
flate2 = "1.0.34"
form_urlencoded = "1.0.1"
futures = "0.3"
futures-util = "0.3.31"
glob = "0.3.1"
image = "0.24.5"
instant = "0.1"
itertools = "0.12"
js-sys = "0.3.60"
keyring = "2"
nalgebra = "0.32"
oauth2 = "4.4.2"
observation-tools-common = { path = "src/common" }
pin-project = "1"
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
protobuf = "=3.2.0"
protobuf-codegen = "=3.2.0"
pyo3 = "0.22.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = "0.12.9"
rmp-serde = "1.3.0"
serde = "1.0.214"
serde_json = "1.0.79"
sha2 = "0.10.6"
similar = "2.6.0"
tar = "0.4.43"
tempfile = "3"
thiserror = "1.0"
tokio = "1"
tokio-util = "0.7.10"
tower = "0.4.13"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.35"
tracing-log = "0.1.3"
tracing-subscriber = "0.3"
tracing-wasm = "0.2.1"
url = "2.2.2"
uuid = "1.2.2"
wasm-bindgen = "0.2.95"
wasm-bindgen-derive = "0.3.0"
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.66"
whoami = "1.4"

[patch.crates-io]
#reqwest = { git = "https://github.com/Dig-Doug/reqwest", branch = "wasm-cookies" }

[profile.dev.build-override]
opt-level = 3
