[workspace]
resolver = "2"
members = [
    "crates/observation-tools-shared",
    "crates/observation-tools-server",
    "crates/observation-tools-client",
    "crates/observation-tools-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3"
repository = "https://github.com/Dig-Doug/observation-tools-client"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.22"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hmac = "0.12"
log = "0.4"
rand = "0.8"
sha2 = "0.10"
minijinja = { version = "2.12", features = ["loader"] }
minijinja-autoreload = "2.12.0"
minijinja-embed = "2.12.0"
object_store = "0.12.4"
observation-tools-client = { path = "crates/observation-tools-client" }
observation-tools-macros = { path = "crates/observation-tools-macros" }
observation-tools-server = { path = "crates/observation-tools-server" }
observation-tools-shared = { path = "crates/observation-tools-shared" }
openapiv3 = "2.2"
prettyplease = "0.2"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
proc-macro2 = "1.0"
quote = "1.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
syn = "2.0.110"
napi-build = "2.3.1"
tempfile = "3.17"
test-log = { version = "0.2", features = ["trace"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde", "js"] }
utoipa-axum = { version = "0.2"}
