[package]
name = "observation-tools-client-examples"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "observation-tools-client-examples-bin"
path = "main.rs"

[lib]
name = "observation_tools_client_examples"
path = "lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "^1.0"
clap = { version = "4.0.32", features = ["derive"] }
nalgebra = { version = "^0.32", features = ["serde-serialize", "mint", "convert-glam024"] }
observation-tools = { path = "../src/client/rust"}
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["full"], optional = true }
tracing = "0.1.35"
tracing-log = {version = "0.1.3"}
tracing-subscriber = "0.3"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"

[features]
rust = ["observation-tools/rust", "tokio"]
wasm = ["observation-tools/wasm"]
default = ["rust"]
