[package]
name = "observation-tools-client-examples"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "observation-tools-client-examples-bin"
path = "main.rs"

[lib]
name = "observation_tools_client_examples"
path = "lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
nalgebra = { workspace = true, features = ["serde-serialize", "mint", "convert-glam024"] }
observation-tools = { path = "../src/client/rust"}
rand = { workspace = true }
rand_chacha = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }

[features]
rust = ["observation-tools/rust", "tokio"]
wasm = ["observation-tools/wasm"]
default = ["rust"]
