[package]
name = "observation-tools-client"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
async-channel = "2.3"
chrono.workspace = true
log.workspace = true
napi = { version = "3", features = ["async", "tokio_rt"] }
napi-derive = { version = "3", features = ["type-def"] }
observation-tools-shared.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing.workspace = true

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tracing-subscriber.workspace = true
