[package]
name = "observation-tools-client"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
async-channel = "2.3"
chrono.workspace = true
log.workspace = true
napi = { version = "3", features = ["async", "tokio_rt", "anyhow"] }
napi-derive = { version = "3", features = ["type-def"] }
observation-tools-macros.workspace = true
observation-tools-shared = { workspace = true, features = ["testing"] }
progenitor-client.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing.workspace = true

[build-dependencies]
napi-build.workspace = true
observation-tools-server.workspace = true
openapiv3.workspace = true
progenitor.workspace = true
prettyplease.workspace = true
syn.workspace = true
serde_json.workspace = true
utoipa.workspace = true

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
observation-tools-server.workspace = true
rand.workspace = true
reqwest.workspace = true
tempfile = { workspace = true }
test-log.workspace = true
tracing-subscriber.workspace = true
