[package]
name = "observation-tools-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "observation-tools"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
minijinja-autoreload = { workspace = true }
minijinja-embed = {workspace = true}
minijinja.workspace = true
oauth2.workspace = true
object_store.workspace = true
observation-tools-shared.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[build-dependencies]
minijinja-embed.workspace = true
serde_json.workspace = true

