[package]
name = "observation-tools-server"
description = "Server for Observation Tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "observation-tools"
path = "src/main.rs"

[dependencies]
url.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
hmac.workspace = true
minijinja-autoreload = { workspace = true }
minijinja-embed = {workspace = true}
minijinja.workspace = true
nom.workspace = true
object_store.workspace = true
observation-tools-shared.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true

[build-dependencies]
minijinja-embed.workspace = true
serde_json.workspace = true

