[package]
name = "observation-tools-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa.workspace = true
uuid = { workspace = true, features = ["v7"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["v7", "rng-getrandom"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
