load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust//wasm_bindgen:defs.bzl", "rust_wasm_bindgen")
load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

SRCS = glob([
    "**/*.rs",
])

PROC_MACRO_DEPS = all_crate_deps(
    proc_macro = True,
)

DEPS = all_crate_deps(
    normal = True,
) 

rust_library(
    name = "client",
    srcs = SRCS,
    aliases = aliases(),
    crate_features = ["rust"],
    proc_macro_deps = PROC_MACRO_DEPS,
    deps = DEPS,
)

rust_test(
    name = "test",
    aliases = aliases(),
    crate = ":client",
    crate_features = [
        "bazel",
    ],
    data = glob([
        "testdata/*",
    ]),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ) + [
        "@rules_rust//tools/runfiles",
    ],
)
