[package]
name = "observation-tools-common"
version = "0.0.1"
edition = "2021"

[lib]
name = "observation_tools_common"
path = "lib.rs"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
glob = { workspace = true }
anyhow = { workspace = true }