[package]
name = "observation-tools-common"
version = "0.0.1"
edition = "2021"

[lib]
name = "observation_tools_common"
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
image = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-derive = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
glob = { workspace = true }
anyhow = { workspace = true }