[package]
name = "observation-tools-common"
version = "0.0.1"
edition = "2021"

[lib]
name = "observation_tools_common"
path = "lib.rs"

[features]
wasm = ["js-sys"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
image = { workspace = true }
js-sys = { workspace = true, optional = true }
nalgebra = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-derive = { workspace = true }
async-graphql = { workspace = true }
rmp-serde = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[build-dependencies]
prost-build = { workspace = true }
glob = { workspace = true }
anyhow = { workspace = true }