load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_rust//proto/protobuf:proto.bzl", "rust_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "all_proto",
    srcs = glob([
        "*.proto",
    ]),
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

java_proto_library(
    name = "all_java_proto",
    deps = [
        ":all_proto",
    ],
)

cc_proto_library(
    name = "all_cc_proto",
    deps = [
        ":all_proto",
    ],
)

rust_proto_library(
    name = "artifacts_api_rust_proto",
    deps = [":all_proto"],
)
