[package]
name = "observation-tools-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
axum = { workspace = true, features = ["multipart"] }
anyhow = { workspace = true }
futures-util = { workspace = true }
observation-tools-common = { workspace = true }
prost = { workspace = true }
async-graphql = { workspace = true, features = ["tracing", "chrono", "url", "dataloader"] }
async-graphql-axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[[bin]]
name = "observation-tools-server"
path = "main.rs"