[package]
name = "observation-tools-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = { workspace = true }
async-graphql = { workspace = true, features = ["tracing", "chrono", "url", "dataloader"] }
async-graphql-axum = { workspace = true }
axum = { workspace = true, features = ["multipart", "macros"] }
clap = { workspace = true, features = ["derive"] }
futures-util = { workspace = true }
observation-tools-common = { workspace = true }
prost = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
diesel = { workspace = true, features = ["uuid", "chrono", "r2d2"] }
diesel-async = { workspace = true, features = ["sqlite", "r2d2"] }
uuid = { workspace = true }
chrono = { workspace = true }
diesel_migrations = { workspace = true }

[[bin]]
name = "observation-tools-server"
path = "main.rs"