[package]
name = "observation-tools-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-graphql = { workspace = true, features = ["tracing", "chrono", "url", "dataloader"] }
async-graphql-axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["multipart", "macros"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
diesel = { workspace = true, features = ["uuid", "chrono", "r2d2"] }
diesel-async = { workspace = true, features = ["sqlite", "r2d2"] }
diesel_migrations = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
observation-tools-common = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
similar = { workspace = true }

[[bin]]
name = "observation-tools-server"
path = "main.rs"

[build-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
flate2 = { workspace = true }
tar = { workspace = true }
