package(default_visibility = ["//visibility:public"])

load("@rules_foreign_cc//foreign_cc:defs.bzl",  "cmake")

filegroup(name = "all", srcs = glob(["**"]), visibility = ["//visibility:public"])

cmake(
    name = "opencv",
    build_args = [
                     "--",
                     "-j 12",
                 ],
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "ENABLE_PRECOMPILED_HEADERS": "OFF",
        "BUILD_opencv_core": "ON",
        "BUILD_opencv_flann": "OFF",
        "BUILD_opencv_imgproc": "ON",
        "BUILD_opencv_ml": "OFF",
        "BUILD_opencv_photo": "OFF",
        "BUILD_opencv_dnn": "OFF",
        "BUILD_opencv_imgcodecs": "ON",
        "BUILD_opencv_videoio": "OFF",
        "BUILD_opencv_highgui": "OFF",
        "BUILD_opencv_features2d": "OFF",
        "BUILD_opencv_calib3d": "OFF",
        "BUILD_opencv_objdetect": "OFF",
        "BUILD_opencv_stitching": "OFF",
        "BUILD_opencv_video": "OFF",
        "BUILD_opencv_java": "OFF",
        "BUILD_opencv_python": "OFF",
    },
    lib_source = "@opencv//:all",
    out_include_dir = "include/opencv4",
    out_shared_libs = [
        "libopencv_core.so.4.2",
        #        "libopencv_flann.so.4.2.0",
        "libopencv_imgproc.so.4.2",
        #        "libopencv_ml.so.4.2.0",
        #        "libopencv_photo.so.4.2.0",
        #        "libopencv_dnn.so.4.2.0",
        "libopencv_imgcodecs.so.4.2",
        #        "libopencv_videoio.so.4.2.0",
        #        "libopencv_highgui.so.4.2.0",
        #        "libopencv_features2d.so.4.2.0",
        #        "libopencv_calib3d.so.4.2.0",
        #        "libopencv_objdetect.so.4.2.0",
        #        "libopencv_stitching.so.4.2.0",
        #        "libopencv_video.so.4.2.0",
    ],
)
