[package]
name = "observation-tools-client"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
description = "Export and visualize data from anywhere in your stack"
readme = "README.md"
homepage = "https://observation.tools"
repository = "https://github.com/Dig-Doug/observation-tools-client"
documentation = "https://www.observation.tools/docs/intro"
include = [
    "**/*.rs",
    "Cargo.toml",
    "pyproject.toml",
    "**/*.md",
]

[lib]
name = "observation_tools_client"
path = "lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
artifacts_api_rust_proto = { path = "../../api/artifacts" }
anyhow = "1.0"
async-channel = "1.8.0"
async-trait = "0.1.52"
base64 = "0.20.0"
bs58 = "0.4.0"
console_error_panic_hook = "0.1.7"
custom_error = "1.9.2"
cxx = { version = "1.0", optional = true }
thiserror = "1.0"
crossbeam-channel = "^0.5"
derive_builder = "0.12.0"
env_logger = "=0.8.4"
form_urlencoded = "1.0.1"
futures = "0.3"
image = "0.24.5"
itertools = "0.10.3"
js-sys = "0.3.60"
protobuf = "=3.2.0"
reqwest = { version = "0.11.14", disable-default-features = true, features = ["rustls-tls", "json", "multipart", "cookies", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.6"
tempfile = "3"
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7.0", features = ["full"], optional = true }
tracing = "0.1.35"
tracing-wasm = "0.2.1"
url = "2.2.2"
uuid = { version = "1.2.2", features = ["v4"] }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ['Window', 'Performance', 'PerformanceTiming'] }
wasm-bindgen-derive = "0.1.1"
nalgebra = { version = "^0.32" }

[build-dependencies]
protobuf-codegen = "=3.2.0"

[features]
files = []
rust = ["tokio", "tokio-util", "files"]
wasm = []
cpp = ["rust", "cxx", "files"]
loadtest = []
