[package]
name = "observation-tools"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
description = "Export, visualize, and inspect data from anywhere in your program"
readme = "../../../README.md"
homepage = "https://observation.tools"
repository = "https://github.com/Dig-Doug/observation-tools-client"
documentation = "https://www.observation.tools/docs/quickstart"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "observation_tools_client"
path = "lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "^1.0"
async-channel = "^1.8"
async-trait = "^0.1.52"
base64 = "^0.21"
bs58 = "^0.5"
console_error_panic_hook = "^0.1"
custom_error = "^1.9"
thiserror = "^1.0"
crossbeam-channel = "^0.5"
derive_builder = "^0.12"
env_logger = "^0.10.0"
form_urlencoded = "1.0.1"
futures = "0.3"
image = "0.24.5"
itertools = "^0.11"
js-sys = "0.3.60"
protobuf = "=3.2.0"
reqwest = { version = "0.11.14", disable-default-features = true, features = ["rustls-tls", "json", "multipart", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.6"
tempfile = { version = "3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7.0", features = ["full"], optional = true }
tracing = "0.1.35"
tracing-wasm = "0.2.1"
url = "2.2.2"
uuid = { version = "1.2.2", features = ["v4"] }
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = ['Window', 'Performance', 'PerformanceTiming'] }
wasm-bindgen-derive = "0.2.1"
nalgebra = { version = "^0.32" }

[build-dependencies]
protobuf-codegen = "=3.2.0"

[features]
files = ["tempfile"]
rust = ["tokio", "tokio-util", "files", "reqwest/stream"]
wasm = []
